# perco

./: .gitignore  README.md  pyproject.toml
aioserver/: filter.py  filter_v2.py  item_json.py  scraper.py  scraper_v2.py  user.py
app/: crud.py  models.py  pydc_models.py  route.py  security.py  utils.py
app/api/: depends.py  login.py  route.py
app/api/routes/: home.py  login.py  route.py  user.py
app/email-tmp/: test_email.html
db/: cookies.py  models.py
src/: autre.py  filter.py  item_json.py  items.py  json1.json  json2.json  scrap.py  scraper.py  scraper_v2.py  server.py  user.py
