[project]
name = "perco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "couchdb>=1.2",
    "curl-cffi>=0.13.0",
    "fastapi[standard]>=0.116.1",
    "lxml>=6.0.1",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
